# Scharsch-Bot-Plugin-Core

./: Cargo.toml
embed/: config.json  config.yml
src/: jni_utils.rs  lib.rs
src/config/: config_format.rs  load.rs  mc_events.rs  mod.rs
src/events/: handler.rs  mc_events.rs  message.rs  mod.rs  ws_events.rs
src/plugin/: logger.rs  mod.rs
src/plugin/kyori_adventure/: component.rs  legacy_serialize.rs  mod.rs  parse.rs  parse_component.rs
src/plugin/kyori_adventure/events/: click_event.rs  hover_event.rs  mod.rs
src/websocket/: websocket.rs
