[package]
name = "scharschbot_core"
version = "0.1.0"
edition = "2021"
authors = ["sharktheone"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
url = "2.3.1"
ws = "0.9.2"
